--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.gatech.watertracker">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
         android:allowBackup="false"
@@ -17,6 +19,7 @@
         </activity>
         <activity android:name=".Auth_Activity"></activity>
         <activity android:name=".Sync_Activity"></activity>
+        <activity android:name=".UartActivity"></activity>
     </application>
 
 </manifest>
