--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Auth_Activity"></activity>
-        <activity android:name=".Sync_Activity"></activity>
         <activity android:name=".UartActivity"></activity>
+        <service
+            android:name=".SyncService"
+            android:exported="false"/>
     </application>
 
 </manifest>
