--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.gatech.watertracker">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -18,11 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Auth_Activity"></activity>
-        <activity android:name=".UartActivity"></activity>
+        <activity android:name=".Auth_Activity" />
+        <activity android:name=".UartActivity" />
+
         <service
             android:name=".SyncService"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity android:name=".RestActivity"></activity>
     </application>
 
 </manifest>
